<resources>
    <string name="app_name">ProjectChuyenDe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Navigation Drawer người dùng    -->
    <string name="menu_home">Home</string>
    <string name="title_home">Home</string>
    <string name="menu_pay">Thanh Toán</string>
    <string name="menu_help">Trợ Giúp</string>
    <string name="menu_infor">Giới Thiệu</string>
    <string name="menu_sign">Sign in</string>
    <string name="menu_signup">Sign up</string>
    <!--  menu  nhanc vien -->
    <string name="menu_filter"> Filter </string>
    <string name="menu_thongtinnhanvien"> Thông tin nhân viên </string>

    <!--    string sign up-->
    <string name="edt_email">Enter your email...</string>
    <string name="edt_sdt">Enter your phonenumber...</string>
    <string name="edt_diachi">Enter your address...</string>
    <!--    admin-->
    <string name="menu_taikhoanquanly">Tạo tài khoản quản lý</string>

    <string name="edtTk">Enter account...</string>
    <string name="menu_createmanager">Tạo tài khoản quản lý</string>
    <!--    Menu quan ly -->
    <string name="menu_danhsachnhanvien">Danh sách nhân viên</string>
    <string name="menu_taonhanvien">Tạo nhân viên</string>
    <string name="menu_thongkengaycong">Thống kê ngày công</string>
    <string name="menu_danhsachban">Danh sách bàn</string>
    <string name="menu_thucdon">Thực đơn</string>
    <string name="menu_dangxuat">Đăng xuất</string>
    <!--    string sign up-->
    <string name="edtTaikhoan">Enter your Username....</string>
    <string name="edtmatkhau">Enter your Password....</string>
    <string name="tv_email">Email</string>
    <string name="tv_sdt">SDT</string>
    <string name="tv_diaChi">Địa chỉ</string>
    <string name="tv_btnSignup">Địa chỉ</string>
    <!-- string staff_information-->
    <string name="tv_Manv">Mã NV</string>
    <string name="edtManv">Enter your code...</string>
    <string name="tv_tennv">Tên NV</string>
    <string name="edtTennv">Enter your name...</string>
    <string name="tv_chucvu">Chức vụ</string>
    <string name="edtchucvu">...</string>
    <string name="tv_luong">Lương</string>
    <string name="edtluong">Số lương nhân viên...</string>
    <string name="tv_taikhoan">Tài khoản</string>
    <string name="tv_Password">Mật khẩu</string>
    <string name="edtgioitinh">Gioi tinh</string>
    <string name="hienthi">Hiển thị</string>
    <string name="btn_hienthi">Hiển thị</string>
    <string name="motaSP">Mô tả sản phẩm:</string>
    <string name="btntaotaikhoan">Tạo tài khoản</string>
    <string name="motaSP2">Mô tả</string>
    <string name="btn_taikhoan">Tài khoản</string>
    <string name="rdbQuanly">Quản lý</string>
    <string name="rdbNhanvien">Nhân viên</string>
    <string name="edt_hoten">Enter your name</string>
    <string name="tv_ngaysinh">Ngày sinh</string>
    <string name="edtngaysinh">Enter your date...</string>
    <!--  string help-->
    <string name="txtdiachi">Địa chỉ: </string>
    <string name="txtSdt">1900xnxx </string>
    <string name="txtTentruong">CĐ Công Nghệ Thủ Đức</string>
    <string name="txtHotline">Hotline</string>
    <string name="txtEmail">Email</string>
    <string name="txtemail">thuducxx@gmail.com</string>
    <!--    string information-->
    <string name="txtVersion">Version 0.0.1</string>
    <string name="txtMember">Members: </string>
    <string name="txtMember1">Võ Minh Tấn Vũ</string>
    <string name="txtMember2">Trần Minh Thuận</string>
    <string name="txtMember3">Phan Duy Thái</string>
    <string name="txtMember4">Nguyễn Văn Hảo</string>
    <string name="txtMember5">Bùi Nguyễn Minh</string>
    <string name="txtTutorial">Tutorial: </string>
    <string name="txtTutorial1">Tiêu Kim Cương</string>

    <!--    Menu nhan vien-->
    <string name="menu_thongke">Thống Kê</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    string timekeeping-->
    <string name="txtName">Tên</string>
    <string name="txtNgaycong">Ngày công</string>
    <string name="txtTonggio">Tổng giờ</string>
    <string name="txtThuong">Thưởng</string>
    <string name="txtLuongcb">Lương CB</string>
    <string name="txtTongluong">Tổng lương</string>
    <string name="tv_Gioitinh">Giới tính</string>


    <!--    du lieu thang-->
    <string-array name="datathang">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <!--    nam-->
    <string-array name="datanam">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
    </string-array>

    <!--danh sach cac khu vuc-->
    <string-array name="Khuvuc">
        <item> Trống (*)</item>
        <item> V1: Dành cho khách hàng ăn tại quán </item>
        <item> V2: Dành cho học sinh, sinh viên </item>
        <item> V3: Dành cho nhân viên văn phòng </item>
        <item> V4: Dành cho đặt tiệc </item>
    </string-array>

    <!--    forgot pass-->


    <!--    forgot pass-->
    <string name="tvForgotpassword">Forgot Password</string>

    <string name="btn_save">Save</string>


    <!--string list desk-->
    <string name="txtTenban"> Tên bàn </string>
    <string name="txtSonguoi"> Số người </string>
    <string name="txtKhuvuc"> Khu vực </string>
    <string name="txtTenbanLD">Tên bàn (*)</string>
    <string name="txtSonguoiLD">Số người (*)</string>
    <string name="txtKhuvucLD">Khu vực (*)</string>
    <string name="txthintTenban">Nhập tên bàn...</string>
    <string name="txthintSonguoi">Nhập số người...</string>
    <string name="btnThemTTB"> Thêm</string>

    <string name="btnDongy"> Đồng ý </string>
    <string name="btnDong">Đóng</string>

    <!--    Toolbar -->
    <string name="barDatTiec">Đặt Tiệc</string>
    <string name="barDatBan">Đặt Bàn</string>


    <!--    forgot pass-->

    <!--    String Home-->
    <string name="btnBanh">Bánh</string>
    <string name="btnNuoc">Nước Uống</string>
    <string name="btnKhu">Khu (Đặt Bàn)</string>
    <string name="btnDatTiec">Đặt Tiệc</string>

    <!--    String BookDesk and BookParty-->
    <string name="tvMaBan">Mã Bàn</string>
    <string name="tvMaTiec">Mã Tiệc</string>
    <string name="tvHoTen">Họ và Tên</string>
    <string name="tvSDT">SĐT</string>
    <string name="tvDiaChi">Địa Chỉ</string>
    <string name="radTruoc">Chọn Trước</string>
    <string name="radSau">Chọn Sau</string>
    <string name="btnDat">Đặt</string>
    <string name="btnHuy">Huỷ</string>

    <!--    -->
    <string name="txt_manv">17211TT2982</string>
    <string name="txt_tennv">Phan Duy Thái</string>
    <string name="txt_sdt">032985783</string>
    <string name="txt_diachi">68/6/2c</string>
    <string name="txt_luong">0đ</string>
    <string name="txt_Email">Thaiphaner99@gmail.com</string>
    <string name="txt_chucvu">Nhân viên quèn</string>

    <!--    -->
    <string name="menu_dangnhap">Đăng nhập</string>
    <string name="txt_taikhoan">Thaiphan99er@gmail.com</string>
    <string name="ngaysinh">7/10/1999</string>
    <string name="txtgioitinh">Nam</string>
    <string name="btn_them">Thêm</string>


    <!--  Bill  -->
    <string name="tvMaHoaDon">Mã Hoá Đơn</string>
    <string name="tvTongTien">TongTien</string>
    <string name="tvTien">0đ</string>
    <string name="btnThanhToan">Thanh Toán</string>

    <!--  Table  -->
    <string name="txtThongTin">Thông Tin Bàn</string>
    <string name="tvBan">0 Bàn</string>
    <string name="btnDatBan">Đặt Bàn</string>
    <string name="tv_logout">Log out</string>
    <string name="tvSuDung">Sử Dụng</string>
    <!--  Thông tin bàn  -->
    <string name="edtSoNguoi">001</string>
    <string name="edtKhuVuc">Mot</string>
    <string name="edtTenBan">Tên Bàn</string>
    <!--  Phương Thức Thanh Toán  -->
    <string name="radTrucTiep">Trực Tiếp</string>
    <string name="radChuyenKhoan">Chuyển Khoản</string>
    <string name="edtDanhGia">Đánh Giá</string>

    <!--  Sửa Món  -->
    <string name="txtTenSanPham">Tên Sản Phẩm</string>
    <string name="txtLoaiSanPham">Loại Sản Phẩm</string>
    <string name="txtDiaChi">Địa Chỉ</string>
    <string name="txtGia">Giá</string>
    <string name="txtHinhAnh">Hình Ảnh</string>
    <string name="btnSuaMon">Sửa Món</string>
    <!--  Tạo Món  -->
    <string name="txtKhuyenMai">Khuyến Mãi</string>
    <string name="btnTaoMon">Tạo Món</string>

    <!-- Chọn loại tài khoản -->
    <string name="rbtnNV">Nhân viên</string>
    <string name="rbtnKH">Khách hàng</string>
    <string name="rbtnAdmin">Admimn</string>


</resources>