<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_danhsachnhanvien"
            android:icon="@drawable/listthongtinnhanvien"
            android:title="@string/menu_danhsachnhanvien" />
        <item
            android:id="@+id/nav_thongkengaycong"
            android:icon="@drawable/thongke1"
            android:title="@string/menu_thongkengaycong" />
        <item
            android:id="@+id/nav_danhsachban"
            android:icon="@drawable/table"
            android:title="@string/menu_danhsachban" />
        <item
            android:id="@+id/nav_thucdon"
            android:icon="@drawable/menufood"
            android:title="@string/menu_thucdon" />
        <item
            android:id="@+id/nav_trogiup"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_thongtin"
            android:icon="@drawable/infor"
            android:title="@string/menu_infor" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_signin"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/menu_sign" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/menu_signup"/>
        </menu>
    </item>


</menu>