<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_trangchu">

    <fragment
        android:id="@+id/nav_trangchu"
        android:name="com.example.projectchuyende.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_thanhtoan"
        android:name="com.example.projectchuyende.ui.pay.PayFragment"
        android:label="@string/menu_pay"
        tools:layout="@layout/fragment_pay" />

    <fragment
        android:id="@+id/nav_trogiup"
        android:name="com.example.projectchuyende.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_signin"
        android:name="com.example.projectchuyende.ui.signin.SignInFragment"
        android:label="@string/menu_sign"
        tools:layout="@layout/fragment_signin" />
    <fragment
        android:id="@+id/nav_danhsachnhanvien"
        android:name="com.example.projectchuyende.ui.liststaff.List_staff"
        android:label="@string/menu_danhsachnhanvien"
        tools:layout="@layout/show_liststaff" />
    <fragment

        android:id="@+id/nav_gioithieu"
        android:name="com.example.projectchuyende.ui.information.Information"
        android:label="@string/menu_infor"
        tools:layout="@layout/fragment_information" />
    <fragment
        android:id="@+id/nav_danhsachban"
        android:name="com.example.projectchuyende.ui.listdesk.ListDesk"
        android:label="@string/menu_danhsachban"
        tools:layout="@layout/fragment_listdesk" />
    <fragment
        android:id="@+id/nav_thucdon"
        android:name="com.example.projectchuyende.ui.menu.MenuFragment"
        android:label="@string/menu_thucdon"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/nav_thongkengaycong"
        android:name="com.example.projectchuyende.ui.timekeeping.timekeeping"
        android:label="@string/menu_thongkengaycong"
        tools:layout="@layout/fragment_timekeeping" />
    <fragment
        android:id="@+id/nav_thongtin"
        android:name="com.example.projectchuyende.ui.account.Staff_inform"
        android:label="@string/menu_thongtinnhanvien"
        tools:layout="@layout/activity_staff_inform" />

</navigation>
