<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trangchu"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_thongtin"
            android:icon="@drawable/ic_baseline_perm_contact_calendar_24"
            android:title="@string/menu_thongtinnhanvien" />
        <item
            android:id="@+id/nav_thongke"
            android:icon="@drawable/thongkenhanvien"
            android:title="@string/menu_thongke" />
        <item
            android:id="@+id/nav_danhsachban"
            android:icon="@drawable/desk"
            android:title="@string/menu_danhsachban" />
        <item
            android:id="@+id/nav_trogiup"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_gioithieu"
            android:icon="@drawable/infor"
            android:title="@string/menu_infor" />
    </group>
    <item>
        <menu>
            <item
                android:id="@+id/nav_signin"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/menu_sign" />
        </menu>
    </item>
</menu>