<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPink"
    android:id="@+id/lnInfor"
    android:orientation="vertical"
    tools:context=".ui.account.Staff_inform">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/ic_baseline_person_24" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/tv_Manv"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtmanv"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:hint="@string/txt_manv"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/tv_tennv"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtnamenv"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:hint="@string/txt_tennv"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/tv_chucvu"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtchucvunv"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:hint="@string/txt_chucvu"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/tv_sdt"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtsdtnv"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:hint="@string/txt_sdt"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/tv_Gioitinh"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtGioitinh"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:hint="@string/txtgioitinh"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/tv_email"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtmail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:hint="@string/txt_Email"
            android:textSize="20dp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/tv_luong"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/txtLuong"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:background="@color/colorBlue"
            android:gravity="center"
            android:hint="@string/txt_luong"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <Button
            android:id="@+id/btntaikhoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_taikhoan"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>