<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPink"
    tools:context=".ui.account.Account">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="Tài khoản"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtAccount"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="@string/edtTaikhoan"
            android:textSize="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="Mật khẩu"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="@string/edtmatkhau"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tv_hoten"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="@string/edt_hoten"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tv_sdt"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtSdt"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="@string/edt_sdt"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tv_diaChi"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="@string/edt_diachi"
            android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/tv_email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:hint="@string/edt_email"
            android:textSize="20dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/btn_save"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>